<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:background="@drawable/shape_bg_white"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <TextView
        style="@style/Text.DarkBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/select_user"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tv_mhs"
        style="@style/Text.DarkBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_white"
        android:drawablePadding="24dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/mahasiswa"
        app:drawableStartCompat="@drawable/ic_person_dark" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tv_dosen"
        style="@style/Text.DarkBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_white"
        android:drawablePadding="24dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/dosen"
        app:drawableStartCompat="@drawable/ic_person_dark" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tv_admin"
        style="@style/Text.DarkBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_selector_white"
        android:drawablePadding="24dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/admin"
        app:drawableStartCompat="@drawable/ic_person_dark" />
</LinearLayout>
