<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:fillViewport="true"
    tools:context=".home.dashboard.proposal.DetailSkripsiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextView.TitleLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/proposal"
                    android:textAllCaps="true" />

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_keyboard_arrow_left"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="10dp"
                android:text="@string/nama"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@id/space1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_name" />

            <TextView
                android:id="@+id/space1"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/space"
                app:layout_constraintEnd_toStartOf="@id/et_name"
                app:layout_constraintStart_toEndOf="@id/tv_pembimbing"
                app:layout_constraintTop_toTopOf="@id/et_name" />

            <TextView
                android:id="@+id/et_name"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:paddingVertical="10dp"
                android:text="@string/rizky_putra_itaji"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/space1"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/tv_nim"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="10dp"
                android:text="@string/npm"
                app:layout_constraintEnd_toStartOf="@id/space2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_nim" />

            <TextView
                android:id="@+id/space2"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/space"
                app:layout_constraintEnd_toStartOf="@id/et_nim"
                app:layout_constraintStart_toEndOf="@id/tv_pembimbing"
                app:layout_constraintTop_toTopOf="@id/et_nim" />

            <TextView
                android:id="@+id/et_nim"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingVertical="10dp"
                android:text="@string/nim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/space2"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <TextView
                android:id="@+id/tv_program_studi"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="10dp"
                android:text="@string/prodi"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@id/space3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_prodi" />

            <TextView
                android:id="@+id/space3"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/space"
                app:layout_constraintEnd_toStartOf="@id/tv_prodi"
                app:layout_constraintStart_toEndOf="@id/tv_pembimbing"
                app:layout_constraintTop_toTopOf="@id/tv_prodi" />

            <TextView
                android:id="@+id/tv_prodi"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingVertical="10dp"
                android:text="@string/program_studi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/space3"
                app:layout_constraintTop_toBottomOf="@id/et_nim" />

            <TextView
                android:id="@+id/tv_pembimbing"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="10dp"
                android:text="@string/pembimbing"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_dosen" />

            <TextView
                android:id="@+id/space4"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/space"
                app:layout_constraintEnd_toStartOf="@id/tv_dosen"
                app:layout_constraintStart_toEndOf="@id/tv_pembimbing"
                app:layout_constraintTop_toTopOf="@id/tv_dosen" />

            <TextView
                android:id="@+id/tv_dosen"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingVertical="10dp"
                android:text="@string/nama_dosen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/space4"
                app:layout_constraintTop_toBottomOf="@id/tv_prodi" />

            <TextView
                android:id="@+id/tv_judul"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:paddingVertical="10dp"
                android:text="@string/judul"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@id/space5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_judul" />

            <TextView
                android:id="@+id/space5"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/space"
                app:layout_constraintEnd_toStartOf="@id/et_judul"
                app:layout_constraintStart_toEndOf="@id/tv_pembimbing"
                app:layout_constraintTop_toTopOf="@id/et_judul" />

            <TextView
                android:id="@+id/et_judul"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:justificationMode="inter_word"
                android:paddingVertical="10dp"
                android:text="@string/sistem_informasi_bimbingan_skripsi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/space5"
                app:layout_constraintTop_toBottomOf="@id/tv_dosen"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_desc"
                style="@style/Text.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:paddingVertical="10dp"
                android:text="@string/deskripsi"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_judul" />

            <TextView
                android:id="@+id/space6"
                style="@style/Text.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/space"
                app:layout_constraintStart_toEndOf="@id/tv_pembimbing"
                app:layout_constraintTop_toTopOf="@id/tv_desc" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/et_desc"
            style="@style/Text.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:justificationMode="inter_word"
            android:text="@string/sistem_informasi_bimbingan_skripsi"
            tools:targetApi="o" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_home"
            style="@style/Button.First"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/home" />

        <Button
            android:id="@+id/btn_view"
            style="@style/Button.Second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/view_profile" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>